SR405244/Lab11/deployment-canary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-deploy-pod-lab11-canary
  annotations:
    kubernetes.io/change-cause: "replicas: 1, img tag: 91"
spec:
  replicas: 1
  selector:
    matchLabels:
        app.kubernetes.io/name: go-deploy-k8s-canary
        app.kubernetes.io/instance: go-deploy-k8s-final-canary
        app.kubernetes.io/version: "1.1.1" 
        app.kubernetes.io/managed-by: none
        app.kubernetes.io/component: REST-API-server-canary
  template:
    metadata:
      labels:
        app.kubernetes.io/name: go-deploy-k8s-canary
        app.kubernetes.io/instance: go-deploy-k8s-final-canary
        app.kubernetes.io/version: "1.1.1" 
        app.kubernetes.io/managed-by: none
        app.kubernetes.io/component: REST-API-server-canary
    spec:
      containers:
        - name: go-deploy-img
          image: srpl/go-deploy-img:91
          ports:
            - containerPort: 3001
          resources: {}
