SR405244/Lab11/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: go-deploy-k8s
  name: go-deploy-pod-lab11
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-deploy-k8s
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: go-deploy-k8s
    spec:
      containers:
      - image: srpl/go-deploy-img:91
        name: go-deploy-img
        resources: {}
status: {}
