SR405244/Lab11/service-canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-deploy-service-canary
spec:
  selector:
    app.kubernetes.io/name: go-deploy-k8s-canary
    app.kubernetes.io/instance: go-deploy-k8s-final-canary
    app.kubernetes.io/managed-by: none
    app.kubernetes.io/component: REST-API-server-canary
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
  type: ClusterIP
