SR405244/Lab11/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-deploy-service
spec:
  selector:
    app.kubernetes.io/name: go-deploy-k8s
    app.kubernetes.io/instance: go-deploy-k8s-final
    app.kubernetes.io/managed-by: none
    app.kubernetes.io/component: REST-API-server
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
  type: ClusterIP
