SR405244/Lab11/ingress-canary.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-deploy-ingress-canary
  labels:
    app.kubernetes.io/name: go-deploy-k8s-canary 
  annotations:
   nginx.ingress.kubernetes.io/canary: "true"
   nginx.ingress.kubernetes.io/canary-weight: "20"  
spec:
  rules:
    - host: minikube-ip # minikube ip
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: go-deploy-service-canary
                port:
                  number: 3001
