SR405244/Lab11/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-deploy-ingress
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "20"
spec:
  rules:
    - host: minikube-ip # minikube ip
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: go-deploy-pod-lab11
                port:
                  number: 3001
